Document and template -javaagent as recommended 1-step installation for Linux server hosts